; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/gt/extr_intel_workarounds.c_intel_gt_init_workarounds.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/gt/extr_intel_workarounds.c_intel_gt_init_workarounds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_i915_private = type { %struct.i915_wa_list }
%struct.i915_wa_list = type { i32 }

@.str = private unnamed_addr constant [3 x i8] c"GT\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"global\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @intel_gt_init_workarounds(%struct.drm_i915_private* %0) #0 {
  %2 = alloca %struct.drm_i915_private*, align 8
  %3 = alloca %struct.i915_wa_list*, align 8
  store %struct.drm_i915_private* %0, %struct.drm_i915_private** %2, align 8
  %4 = load %struct.drm_i915_private*, %struct.drm_i915_private** %2, align 8
  %5 = getelementptr inbounds %struct.drm_i915_private, %struct.drm_i915_private* %4, i32 0, i32 0
  store %struct.i915_wa_list* %5, %struct.i915_wa_list** %3, align 8
  %6 = load %struct.i915_wa_list*, %struct.i915_wa_list** %3, align 8
  %7 = call i32 @wa_init_start(%struct.i915_wa_list* %6, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  %8 = load %struct.drm_i915_private*, %struct.drm_i915_private** %2, align 8
  %9 = load %struct.i915_wa_list*, %struct.i915_wa_list** %3, align 8
  %10 = call i32 @gt_init_workarounds(%struct.drm_i915_private* %8, %struct.i915_wa_list* %9)
  %11 = load %struct.i915_wa_list*, %struct.i915_wa_list** %3, align 8
  %12 = call i32 @wa_init_finish(%struct.i915_wa_list* %11)
  ret void
}

declare dso_local i32 @wa_init_start(%struct.i915_wa_list*, i8*, i8*) #1

declare dso_local i32 @gt_init_workarounds(%struct.drm_i915_private*, %struct.i915_wa_list*) #1

declare dso_local i32 @wa_init_finish(%struct.i915_wa_list*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
